# trading_platform

./: .claudeignore  .coverage 2  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  T2.8_Review.json  conftest.py  docker-compose.ci.yml  docker-compose.staging.yml  docker-compose.yml  fix-all-doc-paths.sh  fix_test_imports.sh  pyproject.toml  pytest.ini  repomix.config.json  requirements-dev.txt  requirements.txt  staged_nginx_oauth2.conf  trading_platform_realization_plan.md
.ai_workflow/: config.json
.ai_workflow/plans/: C5-Rate-Limiting-plan.md  C6-API-Authentication-plan.md  T4.3-Performance-Optimization.md
.claude/: AUTO_RESUME.md  TROUBLESHOOTING.md  session-todos.json  settings.local.json  task-state.json
.claude/TASKS/: P1T13-workflow-simplification-analysis.md
.claude/agents/: codebase-navigator.md  reconciler-debugger.md  security-reviewer.md  test-writer.md
.claude/audits/: P1T13-F5-phase0-findings.md  P1T13-F5-phase0-fixes-summary.md
.claude/checkpoints/: README.md
.claude/commands/: analyze.md  pr-fix.md  review-code.md  review-plan.md  review.md  zen-review.md
.claude/hooks/: check-task-state
.claude/plans/: P4T1.9-ETL-Pipeline.md  T1.4-Compustat-Local-Provider.md  T2.2-plan.md  T2.7-factor-attribution-plan.md
.claude/prompts/: pr-body-template.md
.claude/research/: P1T13-workflow-simplification-analysis.md  automated-coding-research.md  automated-planning-research.md  context-optimization-measurement.md  delegation-decision-tree.md  subagent-capabilities-research.md
.claude/snippets/: clink-only-warning.md
.claude/state/: README.md
.claude/workflows/: 00-analysis-checklist.md  00-task-breakdown.md  00-template.md  01-git-commit.md  01-git.md  02-git-pr.md  02-planning.md  03-reviews.md  03-zen-review-quick.md  04-zen-review-deep.md  05-testing.md  06-debugging.md  07-documentation.md  08-adr-creation.md  08-session-management.md  09-deployment-rollback.md  10-ci-triage.md  11-environment-bootstrap.md  12-component-cycle.md  12-phase-management.md  13-task-creation-review.md  14-task-resume.md  15-update-task-state.md  16-pr-review-comment-check.md  16-subagent-delegation.md  17-automated-analysis.md  18-automated-coding.md  19-automated-pr-fixes.md  20-full-automation.md  DRAFT-pr-review-feedback-rules.md  README.md  component-cycle.md
.codex/: config.toml
.codex/agents/: codebase_navigator.toml  reconciler_debugger.toml  security_reviewer.toml  test_writer.toml
.gemini/: config.yaml
.gemini/agents/: codebase-navigator.md  reconciler-debugger.md  security-reviewer.md  test-writer.md
.github/: CODEOWNERS  markdown-link-check-config.json
.github/workflows/: atlas-notify.yml  backtest-regression.yml  ci-tests-coverage.yml  ci-tests-parallel.yml  deploy-staging.yml  docker-build.yml  markdown-link-check.yml  nightly-full-coverage.yml  pr-auto-review-request.yml  repomix-context.yml
apps/: AGENTS.md  __init__.py
apps/alert_worker/: Dockerfile  __init__.py  entrypoint.py  requirements.txt
apps/auth_service/: Dockerfile  dependencies.py  main.py  requirements.txt
apps/backtest_worker/: Dockerfile  entrypoint.py  requirements.txt
apps/execution_gateway/: Dockerfile  __init__.py  alpaca_client.py  app_context.py  app_factory.py  config.py  database.py  dependencies.py  fat_finger_validator.py  lifespan.py  liquidity_service.py  main.py  metrics.py  middleware.py  order_id_generator.py  order_slicer.py  reconciliation.py  recovery_manager.py  requirements-docker.txt  requirements.txt  schemas.py  schemas_manual_controls.py  slice_scheduler.py  webhook_security.py
apps/market_data_service/: Dockerfile  __init__.py  config.py  main.py  position_sync.py  requirements-docker.txt  schemas.py
apps/model_registry/: Dockerfile  __init__.py  auth.py  error_handlers.py  main.py  requirements-docker.txt  routes.py  schemas.py
apps/orchestrator/: Dockerfile  __init__.py  clients.py  database.py  main.py  orchestrator.py  requirements-docker.txt  schemas.py
apps/signal_service/: Dockerfile  config.py  main.py  model_registry.py  requirements-docker.txt  shadow_validator.py  signal_generator.py
apps/web_console/: Dockerfile  README.md  (+7 more)
config/: __init__.py  settings.py  universe.py
data/: README.md
db/: README.md  alembic.ini
docs/: ADR_GUIDE.md  AI_GUIDE.md  CODING_STANDARDS.md  FILE_RENAME_MAP.md  GIT_WORKFLOW.md  INDEX.md  NEXT_TASK.md  PROJECT_STATUS.md  REPO_MAP.md  SETUP.md  trading_platform_realization_plan.md
libs/: AGENTS.md  __init__.py  duckdb_catalog.py
migrations/: 001_create_model_registry.sql  003_create_orchestration_tables.sql
prompts/: assistant_rules.md  implement_ticket.md
research/: GEMINI.md  README.md
scripts/: README.md  check-markdown-links.sh  check_doc_freshness.py  check_links.py  compute_review_hash.py  context_checkpoint.py  ensure_web_console_jwt_keys.py  fetch_data.py  fix_links.py  generate_architecture.py  generate_certs.py  generate_golden_results.py  generate_test_data.py  git_utils.py  integration_test.py  manage_roles.py  migrate_implementation_guides.py  model_cli.py  operational_status.sh  paper_run.py  post-commit-hook.sh  pre-commit-hook.sh  prepare-commit-msg-hook.sh  quick_train_test.py  reconciliation_shadow_mode.py  renumber_phase.py  setup_testing_env.sh  taq_query.py  taq_sync.py  tasks.py  test_alpaca_live.py  test_enhanced_pnl_integration.py  test_p1_p2_model_registry 2.py  test_p1_p2_model_registry.py  test_p3_signal_generator.py  test_p4_fastapi.py  test_p5_hot_reload.py  test_paper_run.py  test_t4_execution_gateway.py  test_t5_orchestrator.py  (+9 more)
tests/: AGENTS.md  conftest.py  quarantine.txt  test_corporate_actions.py  test_docker_build.py  test_duckdb_catalog.py  test_enhanced_pnl.py  test_etl.py  test_fetch_current_prices.py  test_freshness.py  test_idempotency_regression.py  test_integration_pipeline.py  test_integration_testing.py  test_kill_switch_fixes.py  test_paper_run_timezone.py  test_quality_gate.py  test_staging_deployment.py  test_tasks_cli.py  test_workflow_composite_actions.py
(+2441 files in other folders)
