[tool.poetry]
name = "trading-platform"
version = "0.1.0"
description = "Qlib + Alpaca algorithmic trading platform"
authors = ["Lee <leeewayyy@gmail.com>"]
readme = "README.md"
packages = [
    { include = "libs" },
    { include = "apps" },
    { include = "strategies" },
]

[tool.poetry.dependencies]
python = "^3.11"
# Data processing
polars = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# Services (for later tickets)
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0"
# Database
psycopg = {extras = ["binary"], version = "^3.1.0"}
redis = "^5.0.0"
# Utilities
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
# Linting & formatting
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
# Pre-commit
pre-commit = "^3.6.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "polars.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=libs --cov=apps --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
