[tool.poetry]
name = "trading-platform"
version = "0.1.0"
description = "Qlib + Alpaca algorithmic trading platform"
authors = ["Lee <leeewayyy@gmail.com>"]
readme = "README.md"
packages = [
    { include = "libs" },
    { include = "apps" },
    { include = "strategies" },
]

[tool.poetry.dependencies]
python = "^3.11"
# Data processing
polars = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
scipy = "^1.11.0"  # Statistical functions for factor analytics (Spearman correlation)
# Qlib and ML (T2)
pyqlib = "^0.9.5"
mlflow = "^2.10.0"
lightgbm = "^4.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
# Services (for later tickets)
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0"
# Alert delivery channels
aiosmtplib = "^3.0.0"
twilio = "^8.10.0"
# Database
psycopg = {extras = ["binary"], version = "^3.1.0"}
psycopg-pool = "^3.2.0"
redis = "^5.0.0"
duckdb = "^1.0.0"
pyarrow = "^15.0.0"
alembic = "^1.13.0"
# Market data & Trading
alpaca-py = "^0.15.0"
pandas-datareader = "^0.10.0"  # Fama-French factor data from Ken French website
# Utilities
python-dotenv = "^1.0.0"
hvac = "^2.0.0"
boto3 = "^1.35.0"
tenacity = "^8.2.0"
apscheduler = "^3.10.0"
# Monitoring
prometheus-client = "^0.19.0"
structlog = "^24.0.0"
# Web console (production application)
streamlit = "^1.28.0"
streamlit-autorefresh = "^1.0.1"  # Progressive polling for backtest job status
rq = "^1.16.0"  # Redis job queue for backtest worker
requests = "^2.31.0"
cryptography = "^41.0.0"
pyjwt = "^2.8.0"
statsmodels = "^0.14.6"
plotly = "^5.22.0"
# kaleido = "^0.2.1"  # Optional: for Plotly static image export (no ARM64 wheel)
# Install manually on x86_64 Linux/Windows for PDF reports: pip install kaleido
openpyxl = "^3.1.0"
sqlglot = "^28.5.0"
weasyprint = "^67.0"
jinja2 = "^3.1.6"
nicegui = ">=2.0,<3.0"
pyotp = "^2.9.0"  # TOTP for MFA

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
playwright = ">=1.43.0"
pytest-playwright = ">=0.4.4"
fakeredis = "^2.20.0"
# Linting & formatting
black = "^24.1.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
# Type stubs
pandas-stubs = "^2.3.0"
types-psycopg2 = "^2.9.0"
types-requests = "^2.31.0"
# Pre-commit
pre-commit = "^3.6.0"
respx = "^0.22.0"


[tool.poetry.group.web-console-ng.dependencies]
nicegui = ">=2.0,<3.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}  # OAuth2 JWT validation

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "PT",  # flake8-pytest-style (MANDATORY: enforce pytest markers)
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E402",  # Module level import not at top (intentional for stubbing)
    "PT004", # Use `@pytest.fixture()` with parentheses
]
"scripts/**/*.py" = [
    "E402",  # Path manipulation before imports
]

[tool.ruff.lint.flake8-pytest-style]
# Enforce pytest marker parentheses: @pytest.mark.integration()
mark-parentheses = true
# Enforce fixture parentheses: @pytest.fixture()
fixture-parentheses = true
# Require parametrize names to be tuple: @pytest.mark.parametrize(("arg1", "arg2"), ...)
parametrize-names-type = "tuple"
# Require parametrize values to be list: @pytest.mark.parametrize(..., [...])
parametrize-values-type = "list"
# Require parametrize values rows to be tuple
parametrize-values-row-type = "tuple"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "polars.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["plotly", "plotly.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*", "aiosmtplib"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jose", "jose.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["qlib.*", "mlflow.*", "lightgbm.*", "matplotlib.*", "seaborn.*", "hvac.*", "boto3.*", "botocore.*", "pandas_datareader.*", "yfinance.*", "rq.*", "numba.*", "structlog.*", "twilio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nest_asyncio"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# rq type stubs vary across versions; suppress unused-ignore warnings for affected modules
[[tool.mypy.overrides]]
module = ["libs.backtest.job_queue", "apps.backtest_worker.entrypoint"]
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=libs --cov=apps --cov=strategies --cov-report=term-missing --cov-report=html"
# Register custom markers (enforced by ruff PT rules)
markers = [
    "unit: Unit tests (pure functions, no external dependencies)",
    "integration: Integration tests (require Redis, Postgres, or test server)",
    "e2e: End-to-end tests (full system tests)",
    "slow: Tests taking >1 second",
]

[tool.coverage.run]
relative_files = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
